# r_game_1

./: CMakeLists.txt  Points.h  README.md  build.txt  main.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
shaders/: conveer.frag  conveer.vert  screen.frag  screen.vert
